tests should run on lune (easier to compile and test bytecode on there)

--- a/.luaurc
+++ b/.luaurc
@@ -8,6 +8,7 @@
   "globals": [],
   "aliases": {
     "pkg": "./luau_packages",
-    "luau_pkg": "./luau_packages"
+    "luau_pkg": "./luau_packages",
+    "lune": "~/.lune/.typedefs/0.10.4/"
   }
 }
